# prog3_unit1_tarea_introductoria_v2022_1_laboratorio

./: CMakeLists.txt  README.md  main.cpp  run.sh
.github/workflows/: cmake.yml
autograder/: CMakeLists.txt  config.yml
autograder/tests/catch_test_1_1/: test_1_1.cpp  test_1_1.in
autograder/tests/cppcheck/: cppcheck.cpp  run_test
src/: PC1.cpp  PC1.h  generate_zip.sh  matrix.cpp  matrix.h  number.cpp  number.h
