cmake_minimum_required(VERSION 3.19.2)
project(prog3_unit1_tarea_introductoria_v2022_1)

set(CMAKE_CXX_STANDARD 17)
if(UNIX AND NOT APPLE)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
endif()

include_directories(./src)
file(GLOB source_files
        main.cpp
        src/*.h
        src/*.cpp)

add_executable(${PROJECT_NAME}
        ${source_files}
        src/matrix.cpp src/matrix.h src/number.cpp src/number.h)

if(UNIX AND NOT APPLE)
    find_package(TBB)
    target_link_libraries(${PROJECT_NAME} TBB::tbb)
endif()

add_subdirectory(autograder)

